Fixed header size on mobile, increased background height

--- a/src/app/content-block/content.block.component.scss
+++ b/src/app/content-block/content.block.component.scss
@@ -61,12 +61,12 @@
     .container {
         .background {
             padding-top: 8vh;
-            height: 80vh;
+            height: 100vh;
             width: 100%;
         }
 
         .block {
-            margin-top: -82vh;
+            margin-top: -100vh;
             padding-bottom: 30vh;
         }
     }
@@ -91,7 +91,7 @@
             position: fixed;
             left: 0;
             width: 100%;
-            height: 8h;
+            height: 5.5vh;
         }
     }
 }
